src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AccountID__c</fullName>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Account ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Account_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Group_Sub_Type__c</fullName>
        <inlineHelpText>Buying Group - Takes financial responsibility for their members.
Alliance - Offers their members certain products at discounts.
Association - Individuals who join a group.
Educational Institution - School or College.
DOLP - Doctor Owned Lab Program.</inlineHelpText>
        <label>Account Group Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Buying Group</fullName>
                </value>
                <value>
                    <fullName>Alliance</fullName>
                </value>
                <value>
                    <fullName>Association</fullName>
                </value>
                <value>
                    <fullName>Educational Institution</fullName>
                </value>
                <value>
                    <fullName>DOLP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Sales_Dashboard_Brand__c</fullName>
        <formula>HYPERLINK(&quot;http://www.vspcognos.com/cognos10.2/cgi-bin/cognos.cgi?b_action=cognosViewer&amp;ui.action=run&amp;ui.object=/content/folder[@name=&apos;-Salesforce&apos;]/report[@name=&apos;PracticeReport_1&apos;]&amp;run.outputFormat=HTML&amp;run.prompt=false&amp;p_MasterAcctID=&quot;&amp;MDM_Account_Keys__c,&quot;Brand&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Sales Dashboard</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Sales_Dashboard_VSPOne__c</fullName>
        <formula>HYPERLINK(&quot;http://www.vspcognos.com/cognos10.2/cgi-bin/cognos.cgi?b_action=cognosViewer&amp;ui.action=run&amp;ui.object=/content/folder[@name=&apos;-Salesforce&apos;]/report[@name=&apos;PracticeReport_1&apos;]&amp;run.outputFormat=HTML&amp;run.prompt=false&amp;p_MasterAcctID=&quot;&amp;MDM_Account_Keys__c,&quot;VSPOne&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Sales Dashboard</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>Is Account a Practice Account, Business Account or Account Group.</description>
        <inlineHelpText>Is Account a Practice Account, Business Account or Account Group.</inlineHelpText>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Group</fullName>
                </value>
                <value>
                    <fullName>Business Account</fullName>
                </value>
                <value>
                    <fullName>Practice Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accounting_Department_Phone__c</fullName>
        <description>Accounting Phone Number</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Accounting Phone Number</inlineHelpText>
        <label>Accounting Department Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Accounts_I_Manage__c</fullName>
        <formula>IF( 

(
($User.MarketingID__c &lt;&gt; null) &amp;&amp; (CONTAINS(Concatenated_GAT_Formula__c ,$User.MarketingID__c))
||
($User.MarketingID2__c &lt;&gt; null) &amp;&amp; (CONTAINS(Concatenated_GAT_Formula__c ,$User.MarketingID2__c))
||
( SAP_Accounts_I_Manage__c = true)

),
&quot;True&quot;,&quot;False&quot;)</formula>
        <label>Accounts I Manage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounts_within_10_of_Target__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field will be used to show which Accounts are within 10% of their Marchon Sales goals for $25000.</description>
        <label>10% to Marchon $25000 Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Acquisition_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Acquisition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ActiveClient__c</fullName>
        <label>Active Client?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active_LOBs_Group__c</fullName>
        <formula>IF(OR( Vision_Care_VSP_Other__c ,  Vision_Care_VSP_Network_Provider__c ,  Vision_Care_VSP_Affiliate__c ), &quot;Vision Care,&quot;, &quot;&quot;) + 
IF(OR( Unity__c ,  VSPOne__c ) , &quot;Optics,&quot;, &quot;&quot;) +
IF( Altair_Customer__c , &quot;Altair,&quot;, &quot;&quot;) +
IF( Eyefinity_Customer__c , &quot;Eyefinity,&quot;, &quot;&quot;) +
IF( Marchon__c , &quot;Marchon,&quot;, &quot;&quot;)</formula>
        <label>Active LOBs Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_LOBs_Text__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Active LOBs</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_LOBs__c</fullName>
        <label>Active LOBs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Optics</fullName>
                </value>
                <value>
                    <fullName>Eyefinity</fullName>
                </value>
                <value>
                    <fullName>Vision Care</fullName>
                </value>
                <value>
                    <fullName>Eyewear</fullName>
                </value>
                <value>
                    <fullName>Optics, Eyefinity</fullName>
                </value>
                <value>
                    <fullName>Optics,Vision Care</fullName>
                </value>
                <value>
                    <fullName>Optics, Eyewear</fullName>
                </value>
                <value>
                    <fullName>Optics, Eyefinity, Vision Care</fullName>
                </value>
                <value>
                    <fullName>Optics, Eyefinity, Eyewear</fullName>
                </value>
                <value>
                    <fullName>All LOBs</fullName>
                </value>
                <value>
                    <fullName>Eyefinity, Vision Care</fullName>
                </value>
                <value>
                    <fullName>Eyefinity, Vision Care, Eyewear</fullName>
                </value>
                <value>
                    <fullName>Eyefinity, Eyewear</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active_or_Future_Vision_Care_Account__c</fullName>
        <formula>AND(NOT(ISBLANK(Vision_Care_Effective_Date__c)),
				OR(Vision_Care_End_Date__c &gt;= TODAY(),
						 ISBLANK(Vision_Care_End_Date__c)
							)
				)</formula>
        <label>Active or Future Vision Care Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Languages_Spoken__c</fullName>
        <label>Additional Languages Spoken</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghan Farsi</fullName>
                </value>
                <value>
                    <fullName>Afghan Persian</fullName>
                </value>
                <value>
                    <fullName>Afrikaans</fullName>
                </value>
                <value>
                    <fullName>Albanian</fullName>
                </value>
                <value>
                    <fullName>American Sign Language</fullName>
                </value>
                <value>
                    <fullName>Amharic</fullName>
                </value>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Armenian</fullName>
                </value>
                <value>
                    <fullName>Assyrian</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Bulgarian</fullName>
                </value>
                <value>
                    <fullName>Burmese</fullName>
                </value>
                <value>
                    <fullName>Cambodian</fullName>
                </value>
                <value>
                    <fullName>Cantonese</fullName>
                </value>
                <value>
                    <fullName>Catalan</fullName>
                </value>
                <value>
                    <fullName>Chamorro</fullName>
                </value>
                <value>
                    <fullName>Chichewa</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Coptic</fullName>
                </value>
                <value>
                    <fullName>Creole</fullName>
                </value>
                <value>
                    <fullName>Croatian</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>Egyptian</fullName>
                </value>
                <value>
                    <fullName>Estonian</fullName>
                </value>
                <value>
                    <fullName>Faroese</fullName>
                </value>
                <value>
                    <fullName>Farsi</fullName>
                </value>
                <value>
                    <fullName>Filipino</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreement_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The type of business agreement the practice is participating with VSP for a set amount of time.</inlineHelpText>
        <label>Agreement Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allure_DM__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Allure DM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allure_Key_s__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>SAP Number/ Native ID(s)</inlineHelpText>
        <label>Allure Key(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allure_Rep__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Allure Rep</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Altair_Consignment_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date the Account&apos;s consignment was requested.</inlineHelpText>
        <label>Consignment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Altair_Customer_Potential_Grade__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Altair Customer Potential Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Altair_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Account is Altair Customer if Account has purchased Altair products in last 12 months.</description>
        <inlineHelpText>Account is Altair Customer if Account has purchased Altair products in last 12 months.</inlineHelpText>
        <label>Altair</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Altair_Dashboard__c</fullName>
        <formula>HYPERLINK(&quot;http://www.vspcognos.com/cognos10.2/cgi-bin/cognos.cgi?b_action=cognosViewer&amp;ui.action=run&amp;ui.object=/content/folder[@name=&apos;-Salesforce&apos;]/report[@name=&apos;PracticeReport_1&apos;]&amp;run.outputFormat=HTML&amp;run.prompt=false&amp;p_MasterAcctID=&quot;&amp;MDM_Account_Keys__c,&quot;Altair&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Altair Dashboard</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Altair_Discount_Programs__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Compiled from multiple SAP fields: Price group, price list (%), buying group name, special customer group.</inlineHelpText>
        <label>Discount Programs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Altair_Exception__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Altair - Exception</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Altair_Field_Rep__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Altair - Field Rep</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Altair_Frame_of_Vision_Care_Claims__c</fullName>
        <label>Altair Frame Selection Rate LTM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Altair_Frames_in_Dispensary__c</fullName>
        <inlineHelpText>Altair Sales Reps enter the # of board spaces in the location’s dispensary.  This is not brand/manufacturer specific.</inlineHelpText>
        <label># of Board Spaces in Dispensary</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Altair_Frames_on_Consignment__c</fullName>
        <description>Data integrated information for Altair.</description>
        <label># of Frames on Consignment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Altair_Grade__c</fullName>
        <description>Grade of Altair Account.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Altair Revenue Grade</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Altair_Hybrid_Bebe__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Altair - Hybrid Bebe</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Altair_IM_Ordered_MTD__c</fullName>
        <description>Data integrated information for Altair.</description>
        <inlineHelpText>Number of IM frames ordered during the month that the last Inventory Management Checklist was completed.</inlineHelpText>
        <label>IM Frames Ordered - LIM Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Altair_Key_Account__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Altair - Key Account</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Altair_Key_s__c</fullName>
        <description>SAP Number / Native ID(s).</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>SAP Number / Native ID(s).</inlineHelpText>
        <label>Altair Key(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Altair_Last_Activity__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The last task completed by an Altair sales user</inlineHelpText>
        <label>Altair Last Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Altair_Last_Inventory_Mgmt__c</fullName>
        <description>Data integrated information for Altair.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Last completed inventory of consignment frames.</inlineHelpText>
        <label>Last Inventory Mgmt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Altair_Marchon_Frame_Selection_Rate_LTM__c</fullName>
        <label>Altair/Marchon Frame Selection Rate LTM</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Altair_Net_Frame_Sales_MTD__c</fullName>
        <inlineHelpText>Net frame sales for the current month (updated daily).</inlineHelpText>
        <label>Net Frame Sales MTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Altair_Performance_Grade__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Altair Performance Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Altair_Preferred_Order_Method__c</fullName>
        <inlineHelpText>Account&apos;s preferred method of ordering. Entered by Altair sales rep.</inlineHelpText>
        <label>Preferred Order Method</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AIM</fullName>
                </value>
                <value>
                    <fullName>Lab Supplied</fullName>
                </value>
                <value>
                    <fullName>Purchase Only</fullName>
                </value>
                <value>
                    <fullName>Eyefinity</fullName>
                </value>
                <value>
                    <fullName>IM/Fax</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Sun Purchase</fullName>
                </value>
                <value>
                    <fullName>Web Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Altair_RMs__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Altair RMs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Altair_Realignment_Requested__c</fullName>
        <description>Updated by Altair LOB Admin</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The month and # of frames from the Account&apos;s consignment that Altair has requested to be returned. New request sent quarterly.</inlineHelpText>
        <label>Realignment Requested</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Altair_Reps__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Altair Reps</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Altair_Revenue_YTD__c</fullName>
        <description>Altair Revenue YTD</description>
        <inlineHelpText>Revenue calculated from January through end of last month.</inlineHelpText>
        <label>Altair Revenue YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Altair_SAP_Consignment_Account__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Altair SAP Acct #</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Altair_Sales_Director__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Altair Sales Director</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Altair_Standard__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Altair Prospect Rep</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Altair_YTD_Sales_and_History__c</fullName>
        <description>Hyperlink to outside report that displays Altair YTD Sales &amp; History data.</description>
        <formula>HYPERLINK(&quot;http://schqvbip:8080/ibi_apps/WFServlet?IBIF_wfdescribe=XMLRUN&amp;IBIF_ex=crm_altair_rev&amp;MDMACCTKEY=&quot;&amp; MDM_Account_Keys__c,&quot;YTD Sales and History&quot;,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD Sales and History</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Altair_of_Eyefinity_Frame_Claims__c</fullName>
        <inlineHelpText>Percentage of total Eyefinity Lab Orders over last 12 months. Includes VSP, other payer, and private orders.</inlineHelpText>
        <label>Altair % of Eyefinity Frame Lab Orders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Alternative_Relationship__c</fullName>
        <label>Alternative Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NWIDE - Nationwide Provider/Location</fullName>
                </value>
                <value>
                    <fullName>COLE - Luxottica/Cole Provider/Location</fullName>
                </value>
                <value>
                    <fullName>USVIS - US Vision Provider/Location</fullName>
                </value>
                <value>
                    <fullName>VISWK - VisionWorks Provider/Location</fullName>
                </value>
                <value>
                    <fullName>SITE - On-Site Clinic</fullName>
                </value>
                <value>
                    <fullName>CIGNA – GAP Provider Location</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Applied_Tier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Indicates the Premier Tier and the Premier Benefits associated to that Tier</inlineHelpText>
        <label>Applied Tier</label>
        <referenceTo>Premier_Tier__c</referenceTo>
        <relationshipLabel>Accounts (Applied Tier)</relationshipLabel>
        <relationshipName>Accounts_Applied_Tier</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approval Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Attention_To__c</fullName>
        <description>Attention To field for printing Mailing Labels. Not intended to store data or be visible on Page Layouts.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Attention To</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Average_Frame_Purchases_LTM_Calculated__c</fullName>
        <label>Average Frame Purchases LTM Calculated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Frame_Purchases_LTM__c</fullName>
        <formula>CEILING(Average_Frame_Purchases_LTM_Calculated__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Frame Purchases LTM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Lens_Purchases_LTM_Calculated__c</fullName>
        <label>Average Lens Purchases LTM Calculated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Lens_Purchases_LTM__c</fullName>
        <formula>CEILING(Average_Lens_Purchases_LTM_Calculated__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Lens Purchases LTM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Tiering_Eyewear_Spend_LTM__c</fullName>
        <formula>CEILING(Average_Frame_Purchases_LTM_Calculated__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Tiering Eyewear Spend LTM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Tiering_Optics_Spend_LTM__c</fullName>
        <formula>CEILING(Average_Lens_Purchases_LTM_Calculated__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Tiering Optics Spend LTM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Tiering_Total_Spend_LTM__c</fullName>
        <formula>CEILING(Total_Average_Purchases_LTM_Calculated__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Tiering Total Spend LTM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_VSP_Revenue_Per_Patient__c</fullName>
        <label>Avg VSP Reimbursement Per Patient LTM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Bank Account Number</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Type__c</fullName>
        <label>Bank Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Checking</fullName>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bank Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Routing_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bank Routing Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Validation_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Address Validation Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Validation_Timestamp__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Address Validation Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Business_Acct_Frame_Capture_Rate_LTM__c</fullName>
        <inlineHelpText>Based on # of frames purchased LTM (through last month) by VSP patients/the number of VSP WellVision Exam claims for this Business Account.</inlineHelpText>
        <label>Business Acct Frame Capture Rate LTM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Business_Global_Account_Segmentation__c</fullName>
        <description>Field is display only and should show the value that is stored on the Practice Account</description>
        <formula>TEXT(Parent.Global_Account_Segmentation__c )</formula>
        <inlineHelpText>Growth Opportunity for Account.  A=Highest, F=Lowest</inlineHelpText>
        <label>Global Account Segmentation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Hours__c</fullName>
        <formula>Monday_Business_Hours__c + &apos; &apos;+
 Tuesday_Business_Hours__c + &apos; &apos;+
 Wednesday_Business_Hours__c + &apos; &apos;+
 Thursday_Business_Hours__c + &apos; &apos;+
 Friday_Business_Hours__c + &apos; &apos;+
 Saturday_Business_Hours__c + &apos; &apos;+
 Sunday_Business_Hours__c</formula>
        <label>Business Hours</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bypass_VC_Validation_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass VC Validation Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calculated_Tier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Calculated Tier</label>
        <referenceTo>Premier_Tier__c</referenceTo>
        <relationshipLabel>Accounts (Calculated Tier)</relationshipLabel>
        <relationshipName>Accounts_Calculated_Tier</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChoiceAdvantage_VSPOne_Lab_Orders_LTM__c</fullName>
        <description>% Choice+Advantage VSPOne Lab Orders LTM</description>
        <label>% Choice+Advantage VSPOne Lab Orders LTM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientScore__c</fullName>
        <description>The &apos;value&apos; that CMF assigns to a client account, calculated outside of VSP and loaded once a year. </description>
        <label>Client Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Client Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Common_Account_Name_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Common Account Name Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Common_Account_Name_Report__c</fullName>
        <formula>Name</formula>
        <label>Common Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Contract_End_Follow_up_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Competitor Contract End/Follow-up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Competitor_Contract__c</fullName>
        <label>Competitor Contract</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Essilor</fullName>
                </value>
                <value>
                    <fullName>Hoya</fullName>
                </value>
                <value>
                    <fullName>Zeiss</fullName>
                </value>
                <value>
                    <fullName>VSP Optics</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Concatenated_GAT_Formula__c</fullName>
        <formula>Altair_Exception__c +
&apos;:&apos;+ Altair_Field_Rep__c +
&apos;:&apos;+ Altair_Hybrid_Bebe__c + 
&apos;:&apos;+ Altair_Key_Account__c +
&apos;:&apos;+ Altair_Standard__c + 
&apos;:&apos;+ Ophthalmic_Business_Consultant__c + 
&apos;:&apos;+ Optics_Wholesale__c + 
&apos;:&apos;+ Optics_Contact_Lens_Consultant__c + 
&apos;:&apos;+ Marchon_Key_Account__c + 
&apos;:&apos;+ Marchon_Close_Out__c + 
&apos;:&apos;+ Marchon_Optical__c + 
&apos;:&apos;+ Marchon_Retail__c + 
&apos;:&apos;+ Eyefinity_Inside_Sales__c + 
&apos;:&apos;+ Eyefinity_Outside_Sales__c + 
&apos;:&apos;+ VC_EDS_NA__c + 
&apos;:&apos;+ Global_Business_Development_Manager__c + 
&apos;:&apos;+ Global_Business_Development_Partner__c + 
&apos;:&apos;+ VC_Relationship_Manager__c + 
&apos;:&apos;+ GBD_Relationship_Manager__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Concatenated GAT Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consignment_End_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Consignment End Code</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consignment_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Consignment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consignment_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Another Account sells Altair frames on Consignment at this location.</description>
        <inlineHelpText>Active consignment set at this location.</inlineHelpText>
        <label>Consignment Location</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>